# ai-short

./: README.md  package-lock.json  package.json
.github/workflows/: ci.yml
PRD/: 00 - PRD Brief - Faceless (MVP).md  01 - PRD - Script to Scenes Engine.md  02 - FCM-002 - US - Script Parsing.md
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/web/: package.json  tsconfig.json
