[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend for ReelsappAI"
authors = [
    { name = "Krishnu", email = "krishnu9@outlook.com" },
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "spacy",
    "nltk",
    "python-multipart",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
path = ".venv"
